RESOLVED FIXED263690
[WebGPU] Opening https://www.babylonjs.com/demos/webgpu/forestwebgpu results in a compilation error
https://bugs.webkit.org/show_bug.cgi?id=263690
Summary [WebGPU] Opening https://www.babylonjs.com/demos/webgpu/forestwebgpu results ...
Mike Wyrzykowski
Reported 2023-10-25 15:55:37 PDT
[WebGPU] Opening https://www.babylonjs.com/demos/webgpu/forestwebgpu results in a compilation error Repro: (1) Open https://www.babylonjs.com/demos/webgpu/forestwebgpu (2) Grep for 'MSL compilation error' MSL compilation error: Error Domain=MTLLibraryErrorDomain Code=3 "program_source:71:37: error: use of undeclared identifier '__ArgumentBuffer_1' const constant type0& global2 = __ArgumentBuffer_1.global2; ^ program_source:72:37: error: use of undeclared identifier '__ArgumentBuffer_1' const constant type1& global3 = __ArgumentBuffer_1.global3; ^ " UserInfo={NSLocalizedDescription=program_source:71:37: error: use of undeclared identifier '__ArgumentBuffer_1' const constant type0& global2 = __ArgumentBuffer_1.global2; ^ program_source:72:37: error: use of undeclared identifier '__ArgumentBuffer_1' const constant type1& global3 = __ArgumentBuffer_1.global3; ^ }
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-25 15:56:01 PDT
Tadeu Zagallo
Comment 2 2023-10-27 02:26:38 PDT
EWS
Comment 3 2023-10-30 03:59:55 PDT
Committed 269930@main (c7659f4a59cc): <https://commits.webkit.org/269930@main> Reviewed commits have been landed. Closing PR #19630 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.