[WebGPU] Opening https://www.babylonjs.com/demos/webgpu/forestwebgpu results in a compilation error https://bugs.webkit.org/show_bug.cgi?id=263690 rdar://117501463

Reviewed by Mike Wyrzykowski.

When generating argument buffers from bind groups, I added a short circuit to skip
generating structs and parameters for empty bind groups, but I forgot to increment
the bind group id if the group was empty. This caused groups that come after an
empty bind group to have wrong id, which resulted in the compilation error.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::insertStructs):

Canonical link: https://commits.webkit.org/269930@main